--- a/exercicio1.html
+++ b/exercicio1.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Exercício 1 - HTMl</title>
+    </head>
+    <body>
+        <h1>Exercício 1 - HTML</h1>
+        <hr>
+        <h2>tag "strong"</h2>
+            <p><strong>Atenção:</strong> você está sendo filmado</p>
+                <hr>
+        <h2>tag "em"</h2>
+            <p>É importante dar atenção ao problema do <em>corona</em></p>
+                <hr>
+        <h2>tag "blockquote"</h2>
+        <blockquote cite = "https://g1.globo.com/sp/sao-paulo/noticia/2020/03/21/numero-de-mortes-por-coronavirus-em-sp-sobe-para-15-segundo-governo-do-estado.ghtml">
+        Número de mortes por coronavírus no estado sobe para 15 - O governo do estado de São Paulo confirmou na tarde deste sábado (21)
+         que há mais seis mortes causadas pelo novo coronavírus no estado de São Paulo. 
+         O total subiu para 15 mortes. Uma das vítimas era uma médica generalista, de 52 anos, que estava internada na rede Prevent Senior.
+        </blockquote>
+                <hr>
+        <h2>tag "q"</h2>
+            <p>Como dizia chorão, <q>As flores são bonitas em qualquer lugar do mundo, muita gente tem forma mas não tem conteúdo.</q></p>
+            <hr>
+        <h2>tag "abbr"</h2>
+            A <abbr title="Street League Skateboarding">SLS</abbr> anunciou hoje, em seu instagram, que haverá uma etapa no Brasil.
+        O disco <cite>Thriller</cite> de Michael Jackson foi um dos discos mais vendidos da história da humanidade.
+            <hr>
+        <h2>tag "dfn"</h2>
+        <dfn>O vácuo</dfn> significa vaziez espacial.
+            <hr>
+        <h2>tag "address"</h2>
+        E-mail para contato: <address><a href="gabrielbertholin@gmail.com">gabrielbertholin@gmail.com</a></address>
+            <hr>
+        <h2>tags "ins", "del" e "s"</h2>
+            <p>foi uma <del>péssima</del> <ins>ótima</ins> ideia.</p>
+            <p><s>começaria às 8</s></p>
+            <p>irá começar às 10</p>
+                <hr>
+        <h2>tag "sup"</h2>
+            <p>A resposta da questão era: 10<sup>15</sup></p>
+                <hr>
+        <h2>tag "sub"</h2>
+            <p>O correto a se escrever é "H<sub>2</sub>O"</p>
+    </body>
+</html>
 
