--- a/html/Tabela.html
+++ b/html/Tabela.html
@@ -2,7 +2,7 @@
     <html lang="pt-br">
         <head>
             <meta charset="utf-8"/>
-            <title>Mesclar colunas</title>
+            <title>Tabela lucro</title>
             <style type="text/css">
             table {
             border: none;}
