--- a/html/exercicios3-tabela.html
+++ b/html/exercicios3-tabela.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8"/>
             <title>Futebol</title>
-            <link rel="stylesheet" type="text/css" href="C:\Users\bielb\Desktop\exercicio3\css\exercicios3.css"/>
+            <link rel="stylesheet" type="text/css" href="css/exercicios3.css"/>
         </head>
         <body>
             <header>
