--- a/html/exercicios3-calculadora.html
+++ b/html/exercicios3-calculadora.html
@@ -1,6 +1,6 @@
 <div class = "calculator">
     <input type="number" placeholder="0">
-    <link rel="stylesheet" type="text/css" href="C:\Users\bielb\Desktop\exercicio3\css\exercicios3-calculadora.css"/>
+    <link rel="stylesheet" type="text/css" href="css\exercicios3-calculadora.css"/>
 
 
 
