--- a/html/exercicios3-formulario.html
+++ b/html/exercicios3-formulario.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8"/>
             <title>Formulário</title>
-            <link rel="stylesheet" type="text/css" href="C:\Users\bielb\Desktop\exercicio3\css\exercicios3-formulario.css"/>
+            <link rel="stylesheet" type="text/css" href="css\exercicios3-formulario.css"/>
             
         </head>
         <body>
