--- a/projeto/websites associados.html
+++ b/projeto/websites associados.html
@@ -18,6 +18,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/2daed6a3d9.js"></script>
+    
+    <script language="JavaScript" src="https://cetrak.github.io/Exercicios-DW1A3/ProjetoFinal/projeto.js"></script>
 
 </head>
 
@@ -67,6 +69,7 @@
             <li>
                 <a href="https://www.filosofiaesoterica.com/contact/"> <i class="fas fa-paper-plane" style="margin-left: 30px;" ></i>   Contato</a>
             </li>
+            <li><a onclick="mapas()"><i class="fas fa-arrows-alt-v"></i> Mapa do Site</a></li>
         </ul>
     </nav>
 
