--- a/projeto/websites associados.html
+++ b/projeto/websites associados.html
@@ -135,15 +135,13 @@
 <br></br>
 <div class="col col-md-6">
     <ul id="menu-top-menu-1" class="footer-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-16"><a href="https://www.filosofiaesoterica.com/">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-8 current_page_item menu-item-21"><a href="#">Nossos Websites Associados | Our Associated Websites</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-85"><a target="_blank" href="https://groups.yahoo.com/neo/groups/E-Theosophy/info">E-Theosophy E-Group</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-8 current_page_item menu-item-21"><a href="#">Nossos Websites Associados </a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-84"><a target="_blank" href="https://br.groups.yahoo.com/neo/groups/SerAtento/info">E-Grupo SerAtento</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14869"><a href="https://www.filosofiaesoterica.com/perfil-da-loja-independente/">O Perfil da Loja Independente</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14871"><a href="https://www.filosofiaesoterica.com/profile-of-the-independent-lodge/">Profile of the Independent Lodge</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14967"><a href="https://www.filosofiaesoterica.com/curso-discipulado-segundo-os-mestres/">Curso Sobre o Discipulado Segundo os Mestres</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14969"><a href="https://www.filosofiaesoterica.com/course-in-discipleship-according-to-masters/">A Course in Discipleship According to Masters</a></li>
-<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-18047"><a href="https://www.filosofiaesoterica.com/category/philosophie-et-theosophie-en-francais/">Philosophie et Théosophie en Français</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a href="https://www.filosofiaesoterica.com/contact/">Contato</a></li>
+        
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a onclick="mapas()">Mapa do Site</a></li>
 </ul>			</div>
 
 <div>
