--- a/projeto/websites associados.html
+++ b/projeto/websites associados.html
@@ -51,7 +51,7 @@
 
         <ul class="list-unstyled components" >
             <li>
-            <a onclick="https://caiosilva88.github.io/Exercicios-DW1A3/Projeto/index.html"><i class="fas fa-home" style="margin-left: 30px;" ></i>   Home</a>
+            <a onclick="home()"><i class="fas fa-home" style="margin-left: 30px;" ></i>   Home</a>
             </li>
             <li>
                 <a onclick="associados()"> <i class="fas fa-share-alt" style="margin-left: 30px;" ></i>   Nossos Websites Associados</a>
@@ -68,7 +68,7 @@
                 <a href="https://www.filosofiaesoterica.com/curso-discipulado-segundo-os-mestres/"> <i class="fas fa-user-graduate" style="margin-left: 30px;" ></i>   Curso Discipulado Segundo os Mestres</a>
             </li>
             <li>
-                <a onclick="https://cetrak.github.io/Exercicios-DW1A3/ProjetoFinal/contato.html"> <i class="fas fa-paper-plane" style="margin-left: 30px;" ></i>   Contato</a>
+                <a onclick="contato()"> <i class="fas fa-paper-plane" style="margin-left: 30px;" ></i>   Contato</a>
             </li>
             <li>
                 <a onclick="mapas()"><i class="fas fa-arrows-alt-v"  style="margin-left: 30px;" ></i> Mapa do Site</a>
